[tool.poetry]
name = "dp-cgans"
version = "0.0.3"
description = ""
authors = ["Chang Sun <johnfraney@gmail.com>", "Leopold", "Vincent"]
maintainers = ["Chang Sun <johnfraney@gmail.com>"]
readme = "README.md"
license = "MIT"
include = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/sunchang0124/dp_cgans"
repository = "https://github.com/sunchang0124/dp_cgans"
keywords = ["CGANS", "synthetic data"]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sunchang0124/dp_cgans/issues"


[tool.poetry.dependencies]
python = ">=3.8,<3.10"
wheel = "*"
numpy = "*"
pandas = "*"
torch = "*"
scipy = "*"
rdt= "0.6.4"
sklearn = "*"
graphviz = "*"
faker = "*"
copulas = "*"
pyreadstat = "*"
sdv = "0.14.0"
typer = "*"


[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
dp-cgans = "dp_cgans.__main__:cli"