[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.8"
name = "dp-cgans"
description = "A library to generate synthetic tabular or RDF data using Conditional Generative Adversary Networks (GANs) combined with Differential Privacy techniques."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Sun Chang", email = "sunchang0124@gmail.com" },
]
maintainers = [
    { name = "Sun Chang", email = "sunchang0124@gmail.com" },
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
keywords = [ "CGAN", "synthetic data", "DP", "Differential Privacy", "GAN" ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
    "copulas",
    "numpy",
    "pandas",
    "torch",
    "scipy",
    "rdt",
    "scikit-learn",
    "graphviz",
    "pyreadstat",
    "sdv >=1.5.0",
    "typer",
    "typed-ast",
    "wandb",
]


[project.scripts]
dp-cgans = "dp_cgans.__main__:cli"


[project.optional-dependencies]
test = [
    "pytest >=7.4.0",
    "pytest-cov >=3.0.0",
    "ruff",
    "black",
    "mypy >=1.4.1",
    "pip-tools",
    "types-requests",
    "types-PyYAML",
]


[project.urls]
Homepage = "https://github.com/sunchang0124/dp_cgans"
Documentation = "https://github.com/sunchang0124/dp_cgans"
History = "https://github.com/sunchang0124/dp_cgans/releases"
Tracker = "https://github.com/sunchang0124/dp_cgans/issues"
Source = "https://github.com/sunchang0124/dp_cgans"


# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "test",
]

[tool.hatch.envs.default.scripts]
dev = "python tests/dev.py {args}"
fmt = [
    # "pre-commit run --all --all-files",
    "black src",
    "ruff src --fix",
    "mypy",
]
test = [
    # "fmt",
    "pytest {args}",
]
cov = [
    # "fmt",
    "pytest --cov-report html {args}",
]
cov-check = [
    "python -c 'import webbrowser; webbrowser.open(\"http://0.0.0.0:3000\")'",
    "python -m http.server 3000 --directory ./htmlcov",
]
requirements = "pip-compile -o requirements.txt pyproject.toml"


[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]


## TOOLS config

[tool.hatch.version]
path = "src/dp_cgans/__init__.py"

# If you need to import packages from git URLs:
# [tool.hatch.metadata]
# allow-direct-references = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
omit = ["tests/*"]


[tool.mypy]
files = ["src/"]
strict = true
implicit_reexport = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_any_generics = true


[tool.pytest.ini_options]
addopts = [
    "-vvv",          # Verbose level 3
    "--durations=10", # Show 10 slowest tests durations
    "--cov=src",
    "--color=yes",
    "--cov-report=term-missing",
    # "--cov-fail-under=85",
]
filterwarnings = [
    "ignore::DeprecationWarning:httpx.*:",
]


[tool.black]
color = true
line-length = 120
target-version = ['py38']
skip-string-normalization = false


# https://github.com/charliermarsh/ruff#supported-rules
[tool.ruff]
src = ["src", "tests"]
target-version = "py38"
line-length = 120
select = [
    "I",     # isort
    "N",     # pep8-naming
    "S",     # bandit
    "A",     # flake8-builtins
    "YTT",   # flake8-2020
    "B",     # flake8-bugbear
    "C",     # flake8-comprehensions
    "ICN",   # flake8-import-conventions
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "Q",     # flake8-quotes
    # "FBT",   # flake8-boolean-trap
    "F",     # pyflakes
    "UP",    # pyupgrade
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "PLC",   # pylint convention
    "PLE",   # pylint error
    # "PLR",   # pylint refactor Magic value used in comparison, consider replacing 400 with a constant variable
    "PLW",   # pylint warning
    "RUF",   # ruff specific
    "T",
]
ignore = [
    "E501", # line too long
    "C901", # too complex
    "T201", # do not use print
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["I", "F401"] # module imported but unused
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "S105", "TID252"]

[tool.ruff.mccabe]
max-complexity = 10
