## TODO: NOT USED, DELETE THIS

[metadata]
name = dp_cgans
version = 0.0.2
author = Chang Sun
author_email = chang.sun@maastrichtuniversity.nl
description = This package is extended from SDV (https://github.com/sdv-dev/SDV), CTGAN (https://github.com/sdv-dev/CTGAN), and Differential Privacy in GANs (https://github.com/civisanalytics/dpwgan). The author modified the conditional matrix and cost functions to emphasize on the relations between variables. The main changes are in ctgan/synthesizers/ctgan.py ../data_sampler.py ../data_transformer.py
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sunchang0124/cgans
project_urls =
    Bug Tracker = https://github.com/sunchang0124/cgans/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src